<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/l">


    <TextView
        android:id="@+id/Activity1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="Tu bude widget"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.679" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Activity1"
        android:layout_centerInParent="true"
        android:layout_marginTop="56dp"
        android:text="open BMI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <TextView
        android:id="@+id/vodaText"
        android:layout_width="90dp"
        android:layout_height="30dp"

        android:text="voda"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232" />

    <ImageButton
        android:id="@+id/vodaButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="44dp"
        android:layout_height="42dp"
        app:layout_constraintBottom_toBottomOf="@+id/vodaText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/vodaText"
        app:layout_constraintTop_toTopOf="@+id/vodaText"
        app:layout_constraintVertical_bias="0.562"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/vyberJedlaButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="44dp"
        android:layout_height="42dp"

        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/kcalJedlo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.251"
        app:layout_constraintStart_toEndOf="@+id/kcalJedlo"
        app:layout_constraintTop_toTopOf="@+id/kcalJedlo"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/cvicenieButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="44dp"
        android:layout_height="42dp"

        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/cvicenieTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/cvicenieTextView"
        app:layout_constraintTop_toTopOf="@+id/cvicenieTextView"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_input_add" />

    <TextView
        android:id="@+id/cvicenieTextView"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_above="@+id/Activity1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="44dp"
        android:text="cvicenie"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kcalJedlo" />

    <TextView
        android:id="@+id/kcalJedlo"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_above="@+id/cvicenieTextView"
        android:layout_alignParentStart="true"

        android:layout_alignParentEnd="true"

        android:layout_marginTop="40dp"
        android:text="jedlo"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vodaText" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="211dp"
        android:layout_height="210dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.737"
        tools:progress="60" />

    <Button
        android:id="@+id/resetData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reset data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />


</androidx.constraintlayout.widget.ConstraintLayout>

